--- a/styles/base.css
+++ b/styles/base.css
@@ -292,9 +292,10 @@ h5 { display: block; font-size: 1.1em; }
 
 .searchItem
 {
-	margin-left: 5px;
+	margin-left: 7px;
 	margin-right: 5px;
 	padding: 5px;
 	cursor: pointer;
 	background: #06A8F9;
+	/*text-align: center;*/
 }
