--- a/template/entry.html
+++ b/template/entry.html
@@ -2,7 +2,7 @@
 	<div class="entry" id="entry${Id}">
 		<h1>${Title}</h1>
 		<h3>${Subtitle}</h3>
-		<div class="time">${CreatedOn}</div>
+		<div class="time">{{unixdate CreatedOn}}</div>
 		<div class="retweet">retweet</div>
 		<div class="preview" id="preview${Id}">{{html Preview}}</div>
 		<div class="content" id="content${Id}">{{html Contents}}</div>
