--- a/template/latestComments.html
+++ b/template/latestComments.html
@@ -1,6 +1,6 @@
 <script id="latestCommentsTemplate" type="text/x-jquery-tmpl">
 <div class="comment" id="comment${Id}">
-	<div class="time">${CreatedOn}</div>
+	<div class="time">{{unixdate CreatedOn}}</div>
 	<div class="author">${Author}</div>
 	<div class="content">{{html Content}}</div>
 </div>
