--- a/styles/base.css
+++ b/styles/base.css
@@ -291,7 +291,7 @@ h5 { display: block; font-size: 1.1em; }
 
 #magnifyingLens.loading
 {
-	background: url(../resources/loader.gif) no-repeat center center;
+	background: url(../resources/loader2.gif) no-repeat center center;
 }
 
 #searchResults
