--- a/styles/base.css
+++ b/styles/base.css
@@ -206,6 +206,7 @@ h5 { display: block; font-size: 1.1em; }
 	padding-right: 10px; 
 	width: 68px; 
 	height: 402px; 
+	cursor: pointer;
 }
 #leftPart 
 { 
