--- a/template/bioSide.html
+++ b/template/bioSide.html
@@ -1,3 +1,38 @@
 <script id="bioSideTemplate" type="text/x-jquery-tmpl">
-test
+	<h2>Download my CV</h2>
+	<br />
+	<h3>Find me at:</h3>
+	<br />
+	<ul class="sideList">
+		<li>ikaradimas.at.hotmail.com</li>
+		<li><a href="http://twitter.com/ikaradimas" target="_blank">
+			twitter.com/ikaradimas</a></li>
+		<li><a href="http://facebook.com/kl1nt" target="_blank">
+			facebook.com/kl1nt</a></li>
+		<li><a href="http://github.com/yiannisk">github.com/yiannisk</a></li>
+	</ul>
+	<br />
+	<h3>Likes:</h3>
+	<br />
+	<ul class="sideList">
+		<li>Coding &amp; Application Design</li>
+		<li>Sci Fi &amp; Fantasy Books</li>
+		<li>
+			<a href="http://www.wired.com" target="_blank">Wired</a>, 
+			<a href="http://www.theregister.co.uk" target="_blank">
+				The Register</a>, 
+			<a href="http://www.smashingmagazine.com/" target="_blank">
+				Smashing Mag</a>
+		</li>
+		<li>Music, particularly Metal</li>
+	</ul>
+	<br />
+	<h3>Dislikes:</h3>
+	<br />
+	<ul class="sideList">
+		<li>People with no sense of humor</li>
+		<li>Half - baked consumables</li>
+		<li>Dramatic whatevers</li>
+		<li>Anxiety</li>
+	</ul>
 </script>
