--- a/template/entry.html
+++ b/template/entry.html
@@ -3,8 +3,9 @@
 		<h1>${title}</h1>
 		<h3>${subtitle}</h3>
 		<div class="time">{{unixdate createdon}}</div>
-		<div class="retweet">retweet</div>
+		<!--div class="retweet">retweet</div-->
 		<div class="preview" id="preview${id}">{{html preview}}</div>
+		<br />
 		<div class="content" id="content${id}">{{html contents}}</div>
 		<a href="#" class="backtolist">Posts list</a>
 		<a href="#" class="backtotop">Back to top</a>
