--- a/template/latestEntries.html
+++ b/template/latestEntries.html
@@ -3,8 +3,8 @@
 		<h1>${title}</h1>
 		<h3>${subtitle}</h3>
 		<div class="time">{{unixdate createdon}}</div>
-		<div class="retweet">retweet</div>
+		<!--div class="retweet">retweet</div-->
 		<div class="preview" id="preview${id}">{{html preview}}</div>
-		<a href="#" class="readmore" id="readmore${id}">View Post</a>
+		<a href="#" class="readmore" id="readmore${code}">View Post</a>
 	</div>
 </script>
