Added 'All Posts' feature.

--- a/template/bioSide.html
+++ b/template/bioSide.html
@@ -1,5 +1,6 @@
 <script id="bioSideTemplate" type="text/x-jquery-tmpl">
 	<h2>Download my CV</h2>
+    <a href="resources/cv.en.pdf" target="_blank">In a PDF document</a><br />
 	<br />
 	<h3>Find me at:</h3>
 	<br />
