--- a/template/entrySearch.html
+++ b/template/entrySearch.html
@@ -2,7 +2,7 @@
 	<input type="text" name="searchText" id="searchText" 
 		value="Search this site..." class="searchBox inactive" />
 		
-	<a href="#" class="searchButton">Older Posts</a>
+	<a id="allposts" href="#allposts" class="searchButton">All Posts</a>
 	
 	<div id="magnifyingLens" class="inactive"></div>
 	
