Search results post is now invoked by coe, instead of id.

--- a/template/entrySearchResults.html
+++ b/template/entrySearchResults.html
@@ -1,5 +1,5 @@
 <script id="entrySearchResultsTemplate" type="text/x-jquery-tmpl">
-<div class="searchItem" id="searchItem${id}">
+<div class="searchItem" id="searchItem${code}">
 	<div class="searchItemTitle">${title}</div>
 	{{html subtitle}}
 </div>
