--- a/template/latestEntries.html
+++ b/template/latestEntries.html
@@ -5,6 +5,8 @@
 		<div class="time">{{unixdate createdon}}</div>
 		<!--div class="retweet">retweet</div-->
 		<div class="preview" id="preview${id}">{{html preview}}</div>
-		<a href="#" class="readmore" id="readmore${code}">View Post</a>
+		<div class="tags" id="tags${id}"></div>
+		<a href="#post.${code}" class="readmore" 
+			id="readmore${code}">View Post</a>
 	</div>
 </script>
