SEO feature coming up soon.

--- a/template/entry.html
+++ b/template/entry.html
@@ -3,6 +3,7 @@
 		<h1>${title}</h1>
 		<h3>${subtitle}</h3>
 		<div class="time">{{unixdate createdon}}</div>
+		<div class="tags" id="tags${id}"></div>
 		<!--div class="retweet">retweet</div-->
 		<div class="preview" id="preview${id}">{{html preview}}</div>
 		<br />
