--- a/template/latestEntries.html
+++ b/template/latestEntries.html
@@ -6,7 +6,7 @@
 		<!--div class="retweet">retweet</div-->
 		<div class="preview" id="preview${id}">{{html preview}}</div>
 		<div class="tags" id="tags${id}"></div>
-		<a href="#post.${code}" class="readmore" 
+		<a href="#!post.${code}" class="readmore" 
 			id="readmore${code}">View Post</a>
 	</div>
 </script>
