Deferred to router.js for search results and added important css class

--- a/template/entrySearchResults.html
+++ b/template/entrySearchResults.html
@@ -1,6 +1,6 @@
 <script id="entrySearchResultsTemplate" type="text/x-jquery-tmpl">
-<div class="searchItem" id="searchItem${code}">
+<a class="searchItem" id="searchItem${code}" href="#!post.${code}">
 	<div class="searchItemTitle">${title}</div>
 	{{html subtitle}}
-</div>
+</a>
 </script>
