--- a/styles/base.css
+++ b/styles/base.css
@@ -327,8 +327,9 @@ h5 { display: block; font-size: 1.1em; }
 {
 	padding: 5px;
 	padding-left: 2px;
-	cursor: pointer;
 	background: #06A8F9;
+	text-decoration: none;
+	display: block;
 }
 
 #comments {
@@ -556,4 +557,16 @@ pre.blockCode, code.blockCode {
 	color: #06A8F9;
 	padding: 3px;
 	margin: 2px;
+}
+
+.important {
+	padding: 10px;
+	background: #333;
+	border: 3px solid #222;
+	margin-bottom: 10px;
+}
+
+.important h4 {
+	margin-bottom: 10px;
+	font-weight: bold;
 }
