Adjuster footer height.

--- a/styles/base.css
+++ b/styles/base.css
@@ -584,6 +584,7 @@ pre.blockCode, code.blockCode {
 	margin-left: auto;
 	margin-right: auto;
 	width: 1000px;
+	height: 500px;
 	color: white;
 }
 
@@ -601,6 +602,7 @@ pre.blockCode, code.blockCode {
 	background: #666;
 	width: 277px;
 	padding: 20px;
+	height: 100%;
 }
 
 #footer #twitter li {
@@ -629,6 +631,7 @@ pre.blockCode, code.blockCode {
 	padding: 20px;
 	float: left;
 	display: inline-block;
+	height: 100%;
 }
 
 .repo {
@@ -645,6 +648,7 @@ pre.blockCode, code.blockCode {
 	width: 310px;
 	padding: 20px;
 	display: inline-block;
+	height: 100%;
 }
 
 #stack_overflow_profile {
