--- a/template/adminLogin.html
+++ b/template/adminLogin.html
@@ -1,7 +1,11 @@
 <script id="adminLoginTemplate" type="text/x-jquery-tmpl">
-	<input type="text" name="username" id="username" 
-		value="username" class="inactive" />
-	<br />
-	<input type="password" name="password" id="password" 
-		value="" class="inactive" />
+    <div id="loginContainer">
+        <label for="username">Username</label>
+    	<input type="text" name="username" id="username" 
+    		value="" class="inactive" />
+    	<br />
+    	<label for="password">Password</label>
+    	<input type="password" name="password" id="password" 
+    		value="" class="inactive" />
+    </div>
 </script>
