--- a/template/adminLogin.html
+++ b/template/adminLogin.html
@@ -7,5 +7,8 @@
     	<label for="password">Password</label>
     	<input type="password" name="password" id="password" 
     		value="" class="inactive" />
+        <br />
+        <input type="button" name="doLogin" id="doLogin" 
+            value="Login" />
     </div>
 </script>
